--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
+    "start": "vite preview",
+    "preview": "vite preview",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
