--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-router/serve": "^7.9.2",
     "antd": "^5.27.4",
     "isbot": "^5.1.31",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.2",
