--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "scripts": {
     "build": "react-router build",
-    "dev": "react-router dev",
+    "dev:client": "react-router dev",
+    "dev:server": "node server.js",
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "start": "vite preview",
     "preview": "vite preview",
     "typecheck": "react-router typegen && tsc"
@@ -13,10 +15,13 @@
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
     "antd": "^5.27.4",
+    "axios": "^1.12.2",
+    "cors": "^2.8.5",
     "isbot": "^5.1.31",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-query": "^3.39.3",
     "react-router": "^7.9.2",
     "react-router-dom": "^7.9.3"
   },
@@ -26,6 +31,7 @@
     "@types/node": "^22",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "concurrently": "^9.2.1",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
