--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "@tanstack/react-query": "^5.90.2",
     "antd": "^5.27.4",
     "axios": "^1.12.2",
     "cors": "^2.8.5",
@@ -21,7 +22,6 @@
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-query": "^3.39.3",
     "react-router": "^7.9.2",
     "react-router-dom": "^7.9.3"
   },
