--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.27.4",
     "axios": "^1.12.2",
     "cors": "^2.8.5",
+    "express": "^5.1.0",
     "isbot": "^5.1.31",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
